--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "reading-time": "^1.5.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.0"
   }
 }
