--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/container-queries": "^0.1.1",
     "@types/luxon": "^3.3.0",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
