--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@directus/sdk": "^10.3.5",
+    "@formatjs/intl-localematcher": "^0.4.0",
     "@tailwindcss/container-queries": "^0.1.1",
     "@types/luxon": "^3.3.0",
+    "@types/negotiator": "^0.6.1",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -22,6 +24,7 @@
     "lucide": "^0.259.0",
     "lucide-react": "^0.259.0",
     "luxon": "^3.3.0",
+    "negotiator": "^0.6.3",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
